# mypackage

./: LICENSE  README.md  meta.yaml  setup.cfg
fmcfs/: __init__.py  coulomb.py  other.py  readinfo.py
