[metadata]
name = fmcfs
version = 0.1.0
author = Mao Ye
author_email = maoye666@outlook.com
description = A package for calculating Coulomb stress changes
long_description = file: README.md
long_description_content_type = text/markdown
url = http://github.com/maoye/fmcoulomb
license = MIT

[options]
packages = find:
python_requires = >=3.11
install_requires =
    numpy
    scipy
